[package]
edition = "2021"
name = "univ3-revm-arbitrage"
publish = false
version = "0.0.0"
rust-version = "1.81.0"

[dependencies]
alloy = { version = "0.5.4", features = ["full", "node-bindings"] }
anyhow = "1.0.89"
cacache = { version = "13.0.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
env_logger = "0.11.5"
ethaddr = "0.2.2"

revm = { version = "17.1.0", features = ["alloydb"] }
tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.7.2"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.140"
clap = { version = "4.5.39", features = ["derive"] }


[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"
# CLI arguments
clap = { version = "4", features = ["derive"] }
